--- a/test/demo.html
+++ b/test/demo.html
@@ -38,46 +38,33 @@
         var url = 'https://raw.githubusercontent.com/mapbox/leaflet-mapmatch/master/test/a.geojson';
 
         function load() {
-                // Fetch just the contents of a .geojson file from GitHub
-                // https://www.mapbox.com/mapbox.js/example/v1.0.0/geojson-marker-from-remote-url/
-                $.ajax({
-                        headers: {
-                            'Accept': 'application/vnd.github.v3.raw'
-                        },
-                        xhrFields: {
-                            withCredentials: false
-                        },
-                        dataType: 'json',
-                        url: url,
-                        success: function (geojson) {
-                            // On success add fetched data to the map.
-                            featureLayer.setGeoJSON(geojson);
-                            map.fitBounds(featureLayer.getBounds());
+            // Fetch just the contents of a .geojson file from GitHub
+            // https://www.mapbox.com/mapbox.js/example/v1.0.0/geojson-marker-from-remote-url/
+            $.ajax({
+                headers: {
+                    'Accept': 'application/vnd.github.v3.raw'
+                },
+                xhrFields: {
+                    withCredentials: false
+                },
+                dataType: 'json',
+                url: url,
+                success: function (geojson) {
+                    // On success add fetched data to the map.
+                    featureLayer.setGeoJSON(geojson);
+                    map.fitBounds(featureLayer.getBounds());
 
-                            // Try mapmatch the geojson
-                            mapmatch.mapmatch(geojson, function(data) {
+                    // Try mapmatch the geojson
+                    mapmatch.mapmatch(geojson, function (error, data) {
 
-                                    L.geoJson(data, {
-                                        style: {
-                                            "weight": 20,
-                                            "color": "#172AEF",
-                                            "opacity": 0.6
-                                        },
-                                        onEachFeature: function (feature, layer) {
-                                            layer.bindPopup(body, {
-                                                minWidth: 600,
-                                                maxHeight: 600
-                                            });
-                                        }
-                                    }).addTo(map);
+                        data.addTo(map);
 
-
-                                );
-                            }
-                        });
+                    });
                 }
+            });
+        }
 
-                $(load);
+        $(load);
     </script>
 </body>
 
