Change structure of project on the lines of mapbox-directions

--- a/test/demo.html
+++ b/test/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css" rel="stylesheet" />
-    <script src="../mapbox-mapmatch.js"></script>
+    <script src="../dist/mapbox-mapmatch.js"></script>
 
     <style>
         body {
@@ -61,7 +61,7 @@
                     map.fitBounds(featureLayer.getBounds());
 
                     // Try mapmatch the geojson
-                    mapmatch.mapmatch(geojson, function (error, featureLayer) {
+                    L.mapbox.mapmatch(geojson, function (error, featureLayer) {
 
                         featureLayer.addTo(map);
 
