--- a/test/demo.html
+++ b/test/demo.html
@@ -50,33 +50,39 @@
                 dataType: 'json',
                 url: url,
                 success: function (geojson) {
-                    // On success add original path to the map
-                    featureLayer.setGeoJSON(geojson).setStyle({
-                        weight: 2,
-                        color: 'red',
-                        dashArray: '4,4',
-                        opacity: 0.5
+
+                    // Mapmatch the geojson with default options
+                    L.mapbox.mapmatch(geojson, {}, function (error, matchedLayer) {
+                        matchedLayer.addTo(map).bringToBack();
+                        matchedLayer.setStyle({
+                            weight: 10,
+                            opacity: 0.9
+                        });
                     });
 
-                    map.fitBounds(featureLayer.getBounds());
-
-                    // Try mapmatch the geojson
+                    // Try foot profile matching
                     L.mapbox.mapmatch(geojson, {
-                        profile: "car",
-                        precision: 20,
-                        output: "geometry"
+                        gpsPrecision: 1,
+                        profile: "foot",
                     }, function (error, matchedLayer) {
-
                         matchedLayer.addTo(map);
-
                         matchedLayer.setStyle({
+                            color: '#003460',
                             weight: 2,
-                            color: 'black',
-                            dashArray: '',
-                            opacity: 1
+                            opacity: 0.9
                         });
 
                     });
+
+                    // Compare with the original
+                    featureLayer.setGeoJSON(geojson).setStyle({
+                        weight: 2,
+                        color: '#e30000',
+                        dashArray: '4,4',
+                    });
+                    map.fitBounds(featureLayer.getBounds());
+
+
                 }
             });
         }
