--- a/test/demo.html
+++ b/test/demo.html
@@ -81,9 +81,9 @@
                         output: "feature"
                     }, function (error, feature) {
                         console.log(feature);
-//                        var good_features = $(feature).filter(function (f) {
-//                            return f.properties.confidence > 0.8;
-//                        });
+                        var good_features = $(feature).filter(function (f) {
+                            return f.properties.confidence > 0.8;
+                        });
                         
                     });
 
