Rename to mapbox.match closes #14

--- a/test/demo.html
+++ b/test/demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css" rel="stylesheet" />
-    <script src="../dist/mapbox.map-matching.js"></script>
+    <script src="../dist/mapbox.match.js"></script>
 
     <style>
         body {
