Make profile names consistent with API #11

--- a/test/demo.html
+++ b/test/demo.html
@@ -85,7 +85,7 @@
                     };
 
                     L.mapbox.mapmatching(geojson, {
-                        profile: "foot",
+                        profile: "walking",
                         output: "geojson"
                     }, function (error, geojson) {
                         for (var i = 0; i < geojson.features.length; i++) {
